fix spacing in media

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -604,7 +604,7 @@ h6,.h6 { font-size:14px; }
 }
 .select_dropdown {
     font-size: 12px;
-    padding: 7px 33px 8px 18px;
+    padding: 8px 33px 8px 18px;
 }
 .fleet-mana-bx-wp .fleet-mana-ft-cat{
     padding: 8px 12px;
